# django_for_professionals

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django_ci.yml
backend/: settings.py  urls.py
backend/core/: tests.py  urls.py
